feat: crud credit
